<resources>
    <string name="app_name">WorldNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bbc">BBC</string>
    <string name="menu_aljazera">Aljazera</string>
    <string name="menu_cnn">CNN</string>
    <string name="fox">Fox</string>
    <string name="sky">SKY</string>
    <string name="new_york_times">New York Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>